# NeuralNetwork

./: CMakeLists.txt
res/: XORTrainingInput.txt
src/: CMakeLists.txt  helpers.c  helpers.h  main.c  matrix.c  matrix.h  network.c  network.h
tests/: CMakeLists.txt  nn_tests_matrix_add.c  nn_tests_matrix_add_scalar.c  nn_tests_matrix_copy.c  nn_tests_matrix_dot.c  nn_tests_matrix_fill.c  nn_tests_matrix_scale.c  nn_tests_matrix_subtract.c  nn_tests_matrixadd.c  nn_tests_matrixdot.c  nn_tests_matrixsubtract.c
